@@ -1,0 +1,52 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!--
+    $Id$
+-->
+<!DOCTYPE connection-factories PUBLIC "-//JBoss//DTD JBOSS JCA Config 1.5//EN"
+    "http://www.jboss.org/j2ee/dtd/jboss-ds_1_5.dtd">
+
+<connection-factories>
+    <mbean code="org.opendds.jms.management.ParticipantFactoryService"
+           name="OpenDDS:service=DomainParticipantFactory">
+        <attribute name="DCPSInfoRepo">iiop://localhost:6666/DCPSInfoRepo</attribute>
+        <attribute name="DCPSPersistentDataDir">${jboss.server.data.dir}/opendds</attribute>
+        <attribute name="ORBListenEndpoints">iiop://:6667</attribute>
+        <attribute name="ORBLogFile">${jboss.server.log.dir}/opendds.log</attribute>
+        <attribute name="TransportType">SimpleTcp</attribute>
+        <depends>jboss.jca:service=RARDeployment,name='opendds-jms-1.3.rar'</depends>
+    </mbean>
+
+    <mbean code="org.opendds.jms.management.HibernatePersistenceService"
+           name="OpenDDS:service=PersistenceManager">
+        <attribute name="JndiName">DDS/PersistenceManager</attribute>
+        <attribute name="DataSource">java:/DefaultDS</attribute>
+        <attribute name="Dialect">org.hibernate.dialect.HSQLDialect</attribute>
+        <attribute name="Hbm2ddlAuto">update</attribute>
+        <depends>jboss.jca:service=RARDeployment,name='opendds-jms-1.3.rar'</depends>
+    </mbean>
+
+    <!--
+        Destination configuration
+    -->
+    <mbean code="org.opendds.jms.management.Destination"
+           name="OpenDDS:destination=Topic,type=Topic">
+        <attribute name="JndiName">DDS/Topic</attribute>
+    </mbean>
+
+    <!--
+        ConnectionFactory configuration
+    -->
+    <no-tx-connection-factory>
+        <jndi-name>DDS/ConnectionFactory</jndi-name>
+        <use-java-context>false</use-java-context>
+        <rar-name>opendds-jms-1.3.rar</rar-name>
+        <connection-definition>javax.jms.ConnectionFactory</connection-definition>
+        <config-property name="DomainID" type="java.lang.Integer">1</config-property>
+        <config-property name="TransportType" type="java.lang.String">SimpleTcp</config-property>
+        <config-property name="PersistenceManager" type="java.lang.String">DDS/PersistenceManager</config-property>
+        <min-pool-size>5</min-pool-size>
+        <max-pool-size>20</max-pool-size>
+        <depends>OpenDDS:service=DomainParticipantFactory</depends>
+        <depends>OpenDDS:service=PersistenceManager</depends>
+    </no-tx-connection-factory>
+</connection-factories>
