@@ -1,14 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
     $Id$
-
-    Example DCPSInfoRepoService configuration.
-
-    This configuration will create a DCPSInfoRepo instance using the
-    SimpleTcp transport type which listens to iiop://:6666.
-
-    Author:  Steven Stallion
-    Version: $Revision$
 -->
 <!DOCTYPE connection-factories PUBLIC "-//JBoss//DTD JBOSS JCA Config 1.5//EN"
     "http://www.jboss.org/j2ee/dtd/jboss-ds_1_5.dtd">
@@ -16,12 +8,9 @@
 <connection-factories>
     <mbean code="org.opendds.jms.management.DCPSInfoRepoService"
            name="OpenDDS:service=DCPSInfoRepo">
-        <attribute name="DCPSDebugLevel">10</attribute>
-        <attribute name="ORBDebugLevel">10</attribute>
         <attribute name="ORBListenEndpoints">iiop://:6666</attribute>
         <attribute name="ORBLogFile">${jboss.server.log.dir}/opendds-ir.log</attribute>
         <attribute name="TransportType">SimpleTcp</attribute>
-        <attribute name="VerboseTransportLogging">true</attribute>
-        <depends>jboss.jca:service=RARDeployment,name='opendds-jms-@VERSION@.rar'</depends>
+        <depends>jboss.jca:service=RARDeployment,name='opendds-jms-1.3.rar'</depends>
     </mbean>
 </connection-factories>
